force-app/main/default/objects/Template_Object__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <label>Content Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>