force-app/main/default/objects/Template_Object__c/fields/Document_Url__c.field-meta.xml
<CustomField>
    <fullName>Document_Url__c</fullName>
    <label>Document Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>