force-app/main/default/objects/Template_Object__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>