force-app/main/default/objects/Template_Object__c/fields/Header_Type__c.field-meta.xml
<CustomField>
    <fullName>Header_Type__c</fullName>
    <label>Header Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>