force-app/main/default/objects/Template_Object__c/fields/Media_Handler__c.field-meta.xml
<CustomField>
    <fullName>Media_Handler__c</fullName>
    <label>Media Handler</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>