force-app/main/default/objects/Template_Object__c/fields/Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>Mime_Type__c</fullName>
    <label>Mime Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>