force-app/main/default/objects/Template_Object__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>