force-app/main/default/objects/Template_Object__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>40</length>
    <type>Text</type>
</CustomField>