force-app/main/default/objects/Template_Object__c/fields/Template_Label__c.field-meta.xml
<CustomField>
    <fullName>Template_Label__c</fullName>
    <label>Template Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>