force-app/main/default/objects/Template_Object__c/fields/Template_Message__c.field-meta.xml
<CustomField>
    <fullName>Template_Message__c</fullName>
    <label>Template Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>