force-app/main/default/objects/Template_Object__c/fields/TemplateID__c.field-meta.xml
<CustomField>
    <fullName>TemplateID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TemplateID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>