force-app/main/default/objects/Template_Object__c/fields/Whatsapp_Template__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Template__c</fullName>
    <label>Whatsapp Template</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>