force-app/main/default/objects/Template_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Template_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>